<resources>
    <string name="app_name">CVerde</string>
    <string name="Welcome">Welcome</string>
    <string name="Continue">To continue using this app,\nplease sign up first</string>
    <string name="Login">Login</string>
    <string name="SigUp">SignUp</string>
    <string name="SignUp">SignUp</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="Do_have_an_account_Login">Do you Have an Account? Login</string>
</resources>